FullQa New/src/objects/Ding_Counter__c.object
<CustomObject>
    <description>Used to control the ding number for a given month / year for the ding email</description>
    <fields>
        <fullName>Current_Value__c</fullName>
        <label>Current Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LastMonthFinalDingCount__c</fullName>
        <label>Last Month Final DingCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Next_Ding_Month__c</fullName>
        <label>Next Ding Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Next_Ding_Year__c</fullName>
        <label>Next Ding Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TriggerReset__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Trigger Reset</label>
        <type>Checkbox</type>
    </fields>
    <label>Ding Counter</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Ding Counter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ding Counters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>